--- a/invoke-shiftjis.yaml
+++ b/invoke-shiftjis.yaml
@@ -44,6 +44,9 @@ gemini:
   # model: gemini-2.5-flash-lite
   model: gemini-2.0-flash
 
+image:
+  model: gemini-2.0-flash-preview-image-generation
+
 vosk: # 音声認識のモデルへのパス
   model_dir: ./vosk-model-ja-0.22
 
