--- a/invoke-utf8.yaml
+++ b/invoke-utf8.yaml
@@ -43,7 +43,11 @@ chat:
 gemini:
   # model: gemini-2.5-flash-lite
   model: gemini-2.0-flash
-  image_model: gemini-2.0-flash-preview-image-generation
+
+image:
+  model: gemini-2.0-flash-preview-image-generation
+  path: ./gemini-image.png
+  edit: false
 
 vosk: # 音声認識のモデルへのパス
   model_dir: ./vosk-model-ja-0.22
