--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "langchain-core>=0.3.71",
     "langchain-google-genai>=2.1.8",
     "langchain-ollama>=0.3.6",
+    "langchain-openai>=0.3.28",
     "pillow>=11.3.0",
     "python-dotenv>=1.1.1",
     "requests>=2.32.3",
