--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,13 @@ dependencies = [
     "soundfile>=0.13.1",
     "streamlit>=1.47.1",
     "uvicorn[standard]>=0.35.0",
-    "vosk>=0.3.45",
     "webrtcvad>=2.0.10",
+]
+
+
+[project.optional-dependencies]
+windows = [
+    "vosk>=0.3.45",
 ]
 
 [dependency-groups]
