--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,8 @@
 GOOGLE_API_KEY=""
 OPENROUTER_API_KEY=""
+
+# NOTE: inputと同時に使うと固まる
+# LANGSMITH_TRACING=true
+# LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
+# LANGSMITH_API_KEY=""
+# LANGSMITH_PROJECT="ai-chat"
