--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,8 @@ chat:
     name: U # 呼ばれたい名前に変える
     character: | # あなたのプロフィール
       - 男
-    input: text # text, vosk, whisper, gemini, ai, browser
+    input: text # text, voice, ai から選択
+    asr_engine: whisper # null, vosk, whisper, gemini_asr, browser から選択
     voice: # aiモードのときのみ使う
       engine: null # null, voicevox, coeiroink, aivisspeech
       # config:
@@ -41,13 +42,24 @@ chat:
   streaming_voice_output: ["。", "！", "？", "!", "?", "、"]
   image:
     model: mock # mock, gemini_image, fastsd
-    edit: false   # 画像編集モード
-    interval: 5   # 画像生成頻度（使わない場合この値を大きくする）
+    edit: false # 画像編集モード
+    interval: 5 # 画像生成頻度（使わない場合この値を大きくする）
 
     save_dir: "generated_images" # 生成された画像の保存先ディレクトリ
     url_path: "/images" # Webサーバー経由で画像にアクセスするためのURLパス
-  llm_engine: ollama # ここにLLMモデルのエンジンを指定します (gemini, ollama, または openrouter)
   turn_control_mode: random # llm, random, round_robin
+  # 機能ごとにLLMエンジンとモデルを指定
+  llm:
+    # 発話内容の生成
+    utterance:
+      engine: ollama
+      model: gemma3 # modelを指定しない場合は、下のデフォルトモデルが使われる
+    # 次の話者の決定
+    turn_control:
+      engine: ollama
+    # 状況説明 (画像生成プロンプト用)
+    situation:
+      engine: ollama
 
 # LLM
 gemini:
@@ -87,6 +99,9 @@ fastsd:
     strength: 0.8
 
 # ASR
+gemini_asr:
+  model: gemini-2.0-flash
+
 vosk:
   model_dir: ./vosk-model-ja-0.22
 
