--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ chat:
     character: | # あなたのプロフィール
       - 男
     input: text # text, voice, ai から選択
-    asr_engine: whisper # null, vosk, whisper, gemini_asr, browser から選択
+    asr_engine: vosk # null, vosk, whisper, gemini_asr, browser から選択
     voice: # aiモードのときのみ使う
       engine: null # null, voicevox, coeiroink, aivisspeech
       # config:
@@ -47,7 +47,7 @@ chat:
 
     save_dir: "generated_images" # 生成された画像の保存先ディレクトリ
     url_path: "/images" # Webサーバー経由で画像にアクセスするためのURLパス
-  turn_control_mode: random # llm, random, round_robin
+  turn_control_mode: round_robin # llm, random, round_robin
   # 機能ごとにLLMエンジンとモデルを指定
   llm:
     # 発話内容の生成
