--- a/demo.yaml
+++ b/demo.yaml
@@ -46,15 +46,18 @@ chat:
         # 発話内容の生成
         utterance:
             engine: gemini
-            model: gemini-2.5-flash-lite # modelを指定しない場合は、下のデフォルトモデルが使われる
+            config:
+                model: gemini-2.5-flash-lite
         # 次の話者の決定
         turn_control:
             engine: gemini
-            model: gemini-2.0-flash-lite
+            config:
+                model: gemini-2.0-flash-lite
         # 状況説明 (画像生成プロンプト用)
         situation:
             engine: gemini
-            model: gemini-2.0-flash
+            config:
+                model: gemini-2.0-flash
 
 # LLM
 gemini:
