--- a/demo.yaml
+++ b/demo.yaml
@@ -26,6 +26,7 @@ chat:
               engine: aivisspeech
               config:
                   speaker_id: 1431611904
+    additional_prompt: "" # 状況や会話展開などを書く
     initial_message:
         - name: "{user_name}"
           content: "こんにちは。"
