--- a/.gitignore
+++ b/.gitignore
@@ -167,6 +167,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+.DS_Store
 # PyPI configuration file
 .pypirc
 vosk-model-ja-0.22/
