--- a/demo.yaml
+++ b/demo.yaml
@@ -73,6 +73,10 @@ openrouter:
     model: deepseek/deepseek-chat-v3-0324:free # 使用するOpenRouterモデル名
     base_url: https://openrouter.ai/api/v1 # OpenRouter APIのベースURL
 
+groq:
+    model: openai/gpt-oss-20b
+    base_url: https://api.groq.com/openai/v1/
+
 # Image
 gemini_image:
     model: gemini-2.0-flash-preview-image-generation
